tests/algorithms/x/Java/other/word_search.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden760_word_search2221143590/001/Main.java:45: error: ';' expected
        return _substr(letters, (int)((long)(i_2)), (int)((long)((long)(i_2) + 1L))));
                                                                                    ^
/tmp/TestJavaTranspiler_Algorithms_Golden760_word_search2221143590/001/Main.java:95: error: ';' expected
row_list_1[(int)((long)(cc2_1))] = _substr(word, (int)((long)(k_1)), (int)((long)((long)(k_1) + 1L))));
                                                                                                     ^
2 errors
